pybuild: Use the pytest runner for one of the pep517 test suites.

--- a/tests/tpb05/debian/rules
+++ b/tests/tpb05/debian/rules
@@ -14,7 +14,7 @@ override_dh_auto_install:
 	../../pybuild --install
 
 override_dh_auto_test:
-	../../pybuild --test
+	../../pybuild --test --test-pytest
 
 override_dh_auto_clean:
 	../../pybuild --clean --verbose
