--- a/tests/tpb05/debian/control
+++ b/tests/tpb05/debian/control
@@ -5,6 +5,7 @@ Maintainer: Piotr Ożarowski <piotr@debian.org>
 Build-Depends: debhelper-compat (= 12)
  , python3-all
  , python3-poetry-core
+ , python3-pytest
  , dh-python-pep517
 Standards-Version: 3.9.4
 
