--- a/tests/tpb06/debian/control
+++ b/tests/tpb06/debian/control
@@ -5,7 +5,7 @@ Maintainer: Piotr Ożarowski <piotr@debian.org>
 Build-Depends: debhelper-compat (= 12)
  , python3-all
  , python3-setuptools
- , dh-python-pep517
+ , pybuild-plugin-pyproject
 Standards-Version: 3.9.4
 
 Package: python3-foo
