--- a/tests/tpb05/debian/control
+++ b/tests/tpb05/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper-compat (= 12)
  , python3-all
  , python3-poetry-core
  , python3-pytest
- , dh-python-pep517
+ , pybuild-plugin-pyproject
 Standards-Version: 3.9.4
 
 Package: python3-foo
