--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,13 @@ Multi-Arch: foreign
 Depends: ${misc:Depends}, ${python3:Depends},
 # depend on distutils to avoid adding it to Build-Depends in other packages
  python3-distutils | python3 (<< 3.6.5~rc1-1)
-Provides: dh-sequence-python3, dh-sequence-pypy, dh-sequence-python2
+Provides:
+ dh-sequence-pypy,
+ dh-sequence-python2,
+ dh-sequence-python3,
+ pybuild-plugin-cmake,
+ pybuild-plugin-distutils,
+ pybuild-plugin-flit,
 Suggests: libdpkg-perl, dpkg-dev, flit, python3-build, python3-tomli, python3-installer
 Breaks:
 # due to /usr/bin/dh_python3 and debhelper files
