Add missing ${misc:Depends} to Depends for pybuild-plugin-pyproject.

--- a/debian/control
+++ b/debian/control
@@ -52,6 +52,7 @@ Depends:
  python3-build (>> 0.7~),
  python3-installer,
  python3-tomli,
+ ${misc:Depends}
 Description: Debian helper tools for packaging Python libraries using PEP517
  This metapackage depends on the components necessary for building packages
  with the generic PEP517 build plugin.
