--- a/tests/t304/Makefile
+++ b/tests/t304/Makefile
@@ -16,3 +16,5 @@ check:
 	# make sure /usr/share/doc/ is ignored
 	grep -q -v "py3compile -p foo /usr/share/doc"\
 		debian/foo/DEBIAN/postinst
+	# Check argument parsing order
+	grep -q '#! /usr/bin/python3-dbg' debian/overrides/usr/share/overrides1/foo.py
