--- a/tests/t304/debian/rules
+++ b/tests/t304/debian/rules
@@ -7,9 +7,15 @@ override_dh_auto_install:
 
 override_dh_install:
 	dh_install
-	DH_VERBOSE=1 ../../dh_python3
-	DH_VERBOSE=1 ../../dh_python3 /usr/share/bar
-	DH_VERBOSE=1 ../../dh_python3 /usr/share/baz32 --shebang '/usr/bin/python3.2 -OO'
+	DH_VERBOSE=1 ../../dh_python3 -p foo
+	DH_VERBOSE=1 ../../dh_python3 -p foo /usr/share/bar
+	DH_VERBOSE=1 ../../dh_python3 -p foo /usr/share/baz32 --shebang '/usr/bin/python3.2 -OO'
+
+	# Argument priority: -O > regular args > DH_OPTIONS
+	DH_VERBOSE=1 DH_OPTIONS=--shebang=/usr/bin/python3.0 \
+		../../dh_python3 -p overrides \
+		--shebang=/usr/bin/python3-dbg \
+		/usr/share/overrides1
 
 clean:
 	dh_clean
