--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper-compat (= 12),
  python3-docutils,
 # used by tests:
  python3-all, python3-all-dbg, python3-all-dev,
- python3-nose
+ python3-nose2
 Standards-Version: 4.6.0
 Vcs-Git: https://salsa.debian.org/python-team/tools/dh-python.git
 Vcs-Browser: https://salsa.debian.org/python-team/tools/dh-python
