dh-python-pep517 -> pybuild-plugin-pyproject

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -39,7 +39,7 @@ Tests: pybuild-autopkgtest
 Depends:
  autopkgtest,
  dh-python,
- dh-python-pep517,
  make,
+ pybuild-plugin-pyproject,
  python3-all,
 Restrictions: allow-stderr
