Fix -X handling in dh_python3 et al. Broken in the migration to argparse in 5.20220819. (closes: 1020041)

--- a/tests/t304/debian/rules
+++ b/tests/t304/debian/rules
@@ -8,7 +8,7 @@ override_dh_auto_install:
 override_dh_install:
 	dh_install
 	DH_VERBOSE=1 ../../dh_python3 -p foo
-	DH_VERBOSE=1 ../../dh_python3 -p foo /usr/share/bar
+	DH_VERBOSE=1 ../../dh_python3 -p foo /usr/share/bar -X spam.py
 	DH_VERBOSE=1 ../../dh_python3 -p foo /usr/share/baz32 --shebang '/usr/bin/python3.2 -OO'
 
 	# Argument priority: -O > regular args > DH_OPTIONS
