--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,9 @@ override_dh_auto_test:
 	make tests
 
 override_dh_auto_install:
-	DESTDIR=debian/dh-python PREFIX=/usr make install manpages
+	DESTDIR=debian/dh-python PREFIX=/usr make install
+ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
+	DESTDIR=debian/dh-python PREFIX=/usr make manpages
+endif
 	# generate maintainer scripts, etc.
 	./dh_python3
