--- a/tests/t305/Makefile
+++ b/tests/t305/Makefile
@@ -11,3 +11,4 @@ check:
 	grep -qe "Depends: .*python3\(:any\)\?" debian/foo5e/DEBIAN/control
 	grep -qe "Depends: .*python3\(:any\)\?" debian/foo5f/DEBIAN/control
 	grep -Fxq dh_python3 debian/foo5a.debhelper.log.end_dh_install
+	grep -Fxc dh_python3 debian/foo5a.debhelper.log.end_dh_install | grep -Fxq 1
