debhelper is required

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -38,6 +38,7 @@ Restrictions: allow-stderr
 Tests: pybuild-autopkgtest
 Depends:
  autopkgtest,
+ debhelper,
  dh-python,
  make,
  pybuild-plugin-pyproject,
