pybuild-autopkgtest: allow autopkgtest-specific behavior in debian/rules
- PYBUILD_AUTOPKGTEST gets set to "1" when running tests, so
  debian/rules can have conditional behavior for the autopkgtest test
  run.
- Targets before-pybuild-autopkgtest and after-pybuild-autopkgtest get
  called before and after running the tests, if they exist.

--- a/tests/tpb08/debian/rules
+++ b/tests/tpb08/debian/rules
@@ -24,3 +24,10 @@ override_dh_installinit:
 
 override_dh_python3:
 	# ignore any system dh_python3
+
+before-pybuild-autopkgtest:
+	echo $(PYBUILD_AUTOPKGTEST) > marker-PYBUILD_AUTOPKGTEST
+	touch marker-before-pybuild-autopkgtest
+
+after-pybuild-autopkgtest:
+	touch marker-after-pybuild-autopkgtest
