Note that the pybuild-autopkgtests can't be run against a working tree

--- a/tests/tpb08/Makefile
+++ b/tests/tpb08/Makefile
@@ -2,6 +2,9 @@ all: run check
 
 run:
 	@echo No build needed
+ifeq ($(AUTOPKGTEST_TMP),)
+	@echo NOTE this test uses the system pybuild-autopkgtest, not the working directory
+endif
 
 check: pass fail
 
