Rename tbp08 and 09 to ta01 and 02
The pybuild-autopkgtests really are a different beast

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 # enable or disable tests here:
-#TESTS := test301 test302 test303 test304 test305 test306 testpb01 testpb02 testpb03 testpb04 testpb05 testpb06 testpb07 testpb08 testpb09
+#TESTS := test301 test302 test303 test304 test305 test306 testpb01 testpb02 testpb03 testpb04 testpb05 testpb06 testpb07 testa01 testa02
 TESTS := test301 test302 test303 test304 test305 test306
 
 all: $(TESTS)
