Add support for tox 4. Avoid needing to do an isolated build of the package by using the wheel we built, ourselves. (Closes: #1035675)
Keep tox 3 paths for backportability. Will need tests to be disabled.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -31,7 +31,7 @@ Depends:
  python3-pytest,
  python3-setuptools,
  python3-tomli,
- tox
+ tox (>= 4)
 Restrictions: allow-stderr
 
 Tests: pybuild-autopkgtest
