--- a/tests/tpb07/debian/control
+++ b/tests/tpb07/debian/control
@@ -6,6 +6,7 @@ Build-Depends: debhelper-compat (= 12)
  , python3-all
  , python3-setuptools
  , pybuild-plugin-pyproject
+ , tox (>= 4)
 Standards-Version: 3.9.4
 
 Package: python3-foo
