--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,14 @@ Depends: ${misc:Depends}, ${python3:Depends},
  python3-distutils | python3 (<< 3.6.5~rc1-1)
 Provides:
  dh-sequence-python3,
-Suggests: libdpkg-perl, dpkg-dev, flit, python3-build, python3-tomli, python3-installer
+Suggests:
+ dpkg-dev,
+ flit,
+ libdpkg-perl,
+ python3-build,
+ python3-installer,
+ python3-tomli,
+ python3-wheel
 Breaks:
 # due to /usr/bin/dh_python3 and debhelper files
  python3 (<< 3.3.2-4~),
