--- a/tests/tpb02/Makefile
+++ b/tests/tpb02/Makefile
@@ -10,7 +10,7 @@ check:
 	test ! -f $(DI)/direct_url.json
 	grep -L ^foo-0.1.dist-info/direct_url.json, $(DI)/RECORD | grep -q RECORD
 	grep -q debian debian/python3-foo/usr/lib/python3/dist-packages/foo-0.1.dist-info/INSTALLER
-	grep -q 'Depends:.*python3-tomli' debian/python3-foo/DEBIAN/control
+	grep -q 'Depends:.*python3-cachy' debian/python3-foo/DEBIAN/control
 	grep -q 'Depends:.*python3-importlib-metadata \| python3 (>> 3\.5)' debian/python3-foo/DEBIAN/control
 	grep -L 'Depends:.*tox' debian/python3-foo/DEBIAN/control | grep -q control
 	find .pybuild -name test-executed | grep -q test-executed
