--- a/tests/tpb07/debian/control
+++ b/tests/tpb07/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Piotr Ożarowski <piotr@debian.org>
 Build-Depends: debhelper-compat (= 12)
  , python3-all
+ , python3-pytest
  , python3-setuptools
  , pybuild-plugin-pyproject
  , tox (>= 4)
