--- a/debian/rules
+++ b/debian/rules
@@ -16,3 +16,4 @@ override_dh_auto_install:
 	DESTDIR=debian/dh-python PREFIX=/usr make install manpages
 	# generate maintainer scripts, etc.
 	./dh_python2
+	rm -r usr/lib/python3/dist-packages/__pycache__
