--- a/debian/rules
+++ b/debian/rules
@@ -15,5 +15,6 @@ override_dh_auto_test:
 override_dh_auto_install:
 	DESTDIR=debian/dh-python PREFIX=/usr make install manpages
 	# generate maintainer scripts, etc.
-	./dh_python2
-	rm -r usr/lib/python3/dist-packages/__pycache__
+	./dh_python3
+	ls -l .
+	find . -type d -name '__pycache__'
