--- a/debian/rules
+++ b/debian/rules
@@ -16,5 +16,4 @@ override_dh_auto_install:
 	DESTDIR=debian/dh-python PREFIX=/usr make install manpages
 	# generate maintainer scripts, etc.
 	./dh_python3
-	ls -l .
-	find . -type d -name '__pycache__'
+	find . -type d -name '__pycache__' -exec rm -r {} \;
