--- a/debian/rules
+++ b/debian/rules
@@ -16,3 +16,5 @@ override_dh_auto_install:
 	DESTDIR=debian/dh-python PREFIX=/usr make install manpages
 	# generate maintainer scripts, etc.
 	./dh_python3
+	find . -type f -name '*.pyc' -exec rm -rf {} \;
+	find . -type d -name '__pycache__' -exec rm -rf {} \;
