--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}, ${python3:Depends},
 # depend on distutils to avoid adding it to Build-Depends in other packages
- python3-distutils | python3 (<< 3.6.5~rc1-1)
+ python3-distutils | python3 (<< 3.6.5~rc1-1),
 Provides: dh-sequence-python3, dh-sequence-pypy, dh-sequence-python2
 Suggests: libdpkg-perl, dpkg-dev
 Breaks:
