--- a/debian/control
+++ b/debian/control
@@ -25,8 +25,8 @@ Breaks:
 # due to /usr/bin/dh_python3 and debhelper files
  python3 (<< 3.3.2-4~),
 # due to /usr/bin/dh_python2 and debhelper files
- python,
- python2 (<< 2.7.18-2),
+# python,
+# python2 (<< 2.7.18-2),
  dh-python
 Replaces: python3 (<< 3.3.2-4~), python (<< 2.7.18-2), python2 (<< 2.7.18-2) 
 Description: Debian helper tools for packaging Python libraries and applications
